aks/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petclinic-app
  template:
    metadata:
      labels:
        app: petclinic-app
    spec:
      containers:
      - name: petclinic-app
        image: testacr090426.azurecr.io/petclinic-app:v1
        ports:
        - containerPort: 9966
        resources:
          requests:
            cpu: "200m"
            memory: "250Mi"
          limits:
            cpu: "512m"
            memory: "512Mi"

        livenessProbe:
          httpGet:
            path: /petclinic/api/pettypes
            port: 9966
          initialDelaySeconds: 60
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /petclinic/api/pettypes
            port: 9966
          initialDelaySeconds: 30
          periodSeconds: 10
