aks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
spec:
  type: ClusterIP
  selector:
    app: petclinic-app
  ports:
    - port: 9966
      targetPort: 9966
